kubernetes/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: ingress-basic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
      volumes:
      - name: redis-storage
        emptyDir: {}
    

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: ingress-basic
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - protocol: TCP
    port : 6379
    targetPort: 6379
